crates/core-executor/src/tests/sql/commands/snapshots/fetch/query_fetch_in_union_subquery.snap
---
source: crates/core-executor/src/tests/sql/commands/fetch.rs
description: "\"SELECT c1, 'first_two' as source FROM (\n        SELECT c1 FROM fetch_test ORDER BY c1 FETCH FIRST 2 ROWS\n    ) t1\n    UNION ALL\n    SELECT c1, 'last_two' as source FROM (\n        SELECT c1 FROM fetch_test ORDER BY c1 FETCH NEXT 2 ROWS \n    ) t2\n    ORDER BY c1, source\""
info: "Setup queries: CREATE OR REPLACE TABLE fetch_test(c1 INT); INSERT INTO fetch_test VALUES (1),(2),(3),(4)"
---
Ok(
    [
        "+----+-----------+",
        "| c1 | source    |",
        "+----+-----------+",
        "| 1  | first_two |",
        "| 1  | last_two  |",
        "| 2  | first_two |",
        "| 2  | last_two  |",
        "+----+-----------+",
    ],
)
